--- a/home/wiki/Wiki_setup/Polish_wikis.html
+++ b/home/wiki/Wiki_setup/Polish_wikis.html
@@ -38,7 +38,7 @@
       </li>
     </ul>
     <h3>
-      <span class="mw-headline" id="Build_wikis_using_the_Wikimedia_database_dumps_at_wikimedia.org">Build wikis using the Wikimedia database dumps at wikimedia.org</span>
+      <span class="mw-headline" id="Build_wikis_using_the_database_dumps_at_wikimedia.org">Build wikis using the database dumps at wikimedia.org</span>
     </h3>
     <ul>
       <li>
@@ -68,7 +68,7 @@
               <a href="#Download_pre-built_wikis_from_archive.org"><span class="tocnumber">1.1</span> <span class="toctext">Download pre-built wikis from archive.org</span></a>
             </li>
             <li class="toclevel-2 tocsection-3">
-              <a href="#Build_wikis_using_the_Wikimedia_database_dumps_at_wikimedia.org"><span class="tocnumber">1.2</span> <span class="toctext">Build wikis using the Wikimedia database dumps at wikimedia.org</span></a>
+              <a href="#Build_wikis_using_the_database_dumps_at_wikimedia.org"><span class="tocnumber">1.2</span> <span class="toctext">Build wikis using the database dumps at wikimedia.org</span></a>
             </li>
           </ul>
         </li>
@@ -84,7 +84,7 @@
           </ul>
         </li>
         <li class="toclevel-1 tocsection-7">
-          <a href="#Build_wikis_using_the_Wikimedia_database_dumps_at_wikimedia.org_2"><span class="tocnumber">3</span> <span class="toctext">Build wikis using the Wikimedia database dumps at wikimedia.org</span></a> 
+          <a href="#Build_wikis_using_the_database_dumps_at_wikimedia.org_2"><span class="tocnumber">3</span> <span class="toctext">Build wikis using the database dumps at wikimedia.org</span></a> 
           <ul>
             <li class="toclevel-2 tocsection-8">
               <a href="#Automatic_2"><span class="tocnumber">3.1</span> <span class="toctext">Automatic</span></a>
@@ -355,7 +355,7 @@
       </li>
     </ul>
     <h2>
-      <span class="mw-headline" id="Build_wikis_using_the_Wikimedia_database_dumps_at_wikimedia.org_2">Build wikis using the Wikimedia database dumps at wikimedia.org</span>
+      <span class="mw-headline" id="Build_wikis_using_the_database_dumps_at_wikimedia.org_2">Build wikis using the database dumps at wikimedia.org</span>
     </h2>
     <h3>
       <span class="mw-headline" id="Automatic_2">Automatic</span>
@@ -368,10 +368,10 @@
         Find your wiki in the list
       </li>
       <li>
-        Click the "download" link.
+        Click the <code>download</code> link.
       </li>
       <li>
-        Wait a few hours for the wiki to build
+        Wait for the wiki to build. When it is done, it will automatically load the Main Page
       </li>
     </ul>
     <h3>
