--- a/home/wiki/Dashboard/Wiki_maintenance.html
+++ b/home/wiki/Dashboard/Wiki_maintenance.html
@@ -123,7 +123,7 @@
           n
         </td>
         <td class='cell_center'>
-          2016-09-01
+          2016-10-01
         </td>
         <td class='cell_center'>
           2015-08-06
@@ -288,6 +288,40 @@
         </td>
         <td class='cell_center'>
           <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("en.wikipedia.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          en.wikipedia.org_new
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          1969-12-31
+        </td>
+        <td class='cell_center'>
+        </td>
+        <td class='cell_center'>
+          &lt;&lt;NULL&gt;&gt;
+        </td>
+        <td class='cell_center'>
+          xdat
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          v2
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("en.wikipedia.org_new")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("en.wikipedia.org_new")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("en.wikipedia.org_new")'>Search</button>
         </td>
       </tr>
       <tr>
@@ -506,7 +540,7 @@
           n
         </td>
         <td class='cell_center'>
-          2016-09-02
+          2016-10-02
         </td>
         <td class='cell_center'>
           2015-08-05
@@ -518,7 +552,7 @@
           sqlite3
         </td>
         <td class='cell_center'>
-          v2
+          v0
         </td>
         <td class='cell_center'>
           v1
@@ -596,7 +630,7 @@
         <span class="mw-cite-backlink"><a href="#cite_ref-wiki_type_5-0">^</a></span> <span class="reference-text">Data storage for wiki. Can be either xdat or sqlite.</span>
       </li>
       <li id="cite_note-category_version-6">
-        <span class="mw-cite-backlink"><a href="#cite_ref-category_version_6-0">^</a></span> <span class="reference-text">Current category level of wiki. Can be either 1 or 2. See <a href="http://xowa.org/home/wiki/App/Category.html" id="xolnki_3" title="App/Category" class="xowa-visited">App/Category</a> for more info</span>
+        <span class="mw-cite-backlink"><a href="#cite_ref-category_version_6-0">^</a></span> <span class="reference-text">Current category level of wiki. Can be either 1 or 2. See <a href="http://xowa.org/home/wiki/App/Category.html" id="xolnki_3" title="App/Category">App/Category</a> for more info</span>
       </li>
       <li id="cite_note-search_version-7">
         <span class="mw-cite-backlink"><a href="#cite_ref-search_version_7-0">^</a></span> <span class="reference-text">Current search level of wiki. Can be either 1 or 2. See <a href="http://xowa.org/home/wiki/App/Search.html" id="xolnki_4" title="App/Search">App/Search</a> for more info</span>
