--- a/home/wiki/Help/Contents.html
+++ b/home/wiki/Help/Contents.html
@@ -249,7 +249,7 @@
         <td style='width:25%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Category.html" id="xolnki_36" title="App/Category" class="xowa-visited">Category</a>
+              <a href="http://xowa.org/home/wiki/App/Category.html" id="xolnki_36" title="App/Category">Category</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Xtn/Mediawiki/Scribunto.html" id="xolnki_37" title="App/Xtn/Mediawiki/Scribunto">Scribunto</a>
