--- a/home/wiki/Options.html
+++ b/home/wiki/Options.html
@@ -320,7 +320,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_2" title="Options/Window" class="xowa-visited">Window</a>
+              <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_2" title="Options/Window">Window</a>
             </td>
             <td>
               Window Font and Startup position
@@ -434,7 +434,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Import_Dansguardian.html" id="xolnki_15" title="Options/Import Dansguardian" class="xowa-visited">Import Dansguardian</a>
+              <a href="http://xowa.org/home/wiki/Options/Import_Dansguardian.html" id="xolnki_15" title="Options/Import Dansguardian">Import Dansguardian</a>
             </td>
             <td>
               Import using Dansguardian filters
@@ -447,7 +447,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_16" title="Options/HTML" class="xowa-visited">Appearance</a>
+              <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_16" title="Options/HTML">Appearance</a>
             </td>
             <td>
               HTML page font and custom CSS
@@ -476,7 +476,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Content_apps.html" id="xolnki_19" title="Options/Content apps" class="xowa-visited">Content Apps</a>
+              <a href="http://xowa.org/home/wiki/Options/Content_apps.html" id="xolnki_19" title="Options/Content apps">Content Apps</a>
             </td>
             <td>
               Content applications (web browser, image viewer, media player)
