--- a/home/wiki/Change_log.html
+++ b/home/wiki/Change_log.html
@@ -700,7 +700,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Databases/Overview.html" id="xolnki_8" title="App/Databases/Overview" class="xowa-visited">App/Databases/Overview</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Databases/Overview.html" id="xolnki_8" title="App/Databases/Overview">App/Databases/Overview</a>
       </dd>
     </dl>
     <h2>
@@ -817,7 +817,7 @@
         <span style='font-variant:small-caps'>Example</span>: xowa.api.addon.bldr.central.log_verbose = 'y';.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Config_script.html" id="xolnki_10" title="Options/Config script" class="xowa-visited">Options/Config_script</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Config_script.html" id="xolnki_10" title="Options/Config script">Options/Config_script</a>
       </dd>
     </dl>
     <ul>
