--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -203,7 +203,7 @@
     </p>
     <ul>
       <li>
-        v3.9.2 features a new Category system. See <a href="http://xowa.org/home/wiki/App/Category.html" id="xolnki_13" title="App/Category" class="xowa-visited">Category Overview</a>
+        v3.9.2 features a new Category system. See <a href="http://xowa.org/home/wiki/App/Category.html" id="xolnki_13" title="App/Category">Category Overview</a>
       </li>
       <li>
         v3.6.3 features a Download page. See <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_14" title="Special:XowaDownloadCentral" class="xowa-visited">Download Central</a>
@@ -267,7 +267,7 @@
             If the font size is too small, right-click and choose Font Increase
           </li>
           <li>
-            If you need more control over the font, customize it on the <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_23" title="Options/Window" class="xowa-visited">Options/Window</a> and <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_24" title="Options/HTML" class="xowa-visited">Options/HTML</a>
+            If you need more control over the font, customize it on the <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_23" title="Options/Window">Options/Window</a> and <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_24" title="Options/HTML">Options/HTML</a>
           </li>
         </ul>
       </li>
